# multiagenticsystem

./: .env.example  .gitignore  CONTRIBUTING.md  FLUTTER_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  example.py  pyproject.toml  quick_test.py  setup_flutter_builder.sh  test_config.yaml  test_function_calling.py  test_runner.py
config/: example_config.yaml  simple_config.json
docs/: LOGGING.md
examples/: README.md  logging_demo.py
examples/flutter_app_builder/: IMPLEMENTATION.md  README.md  build_verifier.py  config_driven_builder.py  direct_flutter_music_builder.py  flutter_app_builder_with_logging.py  flutter_builder.py  flutter_config.yaml  logging_demo.py  progress_tracker.py  requirements.txt  setup.sh  simple_demo.py  test_file_creation.py  test_simple_tool.py  view_logs.py
examples/flutter_app_builder/apps/: README.md
examples/flutter_app_builder/flutter_builder_logs/: multiagenticsystem_20250624.json  multiagenticsystem_20250627.json
multiagenticswarm/: __init__.py  __main__.py  logging.py
multiagenticswarm/api/: __init__.py  server.py
multiagenticswarm/core/: __init__.py  agent.py  automation.py  base_tool.py  system.py  task.py  tool_executor.py  tool_parser.py  trigger.py
multiagenticswarm/llm/: __init__.py  providers.py  tool_calling_mixin.py
multiagenticswarm/utils/: __init__.py  log_viewer.py  logger.py
multiagenticswarm/web/: __init__.py  app.py
multiagenticsystem/: __init__.py  __main__.py  logging.py
multiagenticsystem/api/: __init__.py  server.py
multiagenticsystem/core/: __init__.py  agent.py  automation.py  base_tool.py  system.py  task.py  tool.py  tool_parser.py  trigger.py
multiagenticsystem/llm/: __init__.py  providers.py
multiagenticsystem/tools/: terminal.py
multiagenticsystem/utils/: __init__.py  log_viewer.py  logger.py
multiagenticsystem/web/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_agent.py  test_automation.py  test_base_tool.py  test_multiagenticsystem.py  test_system.py  test_task.py  test_tool.py  test_tool_executor.py  test_tool_parser.py  test_trigger.py
